@@ -59,3 +59,4 @@ This should make using commands a lot easier
 * dimension configs now default to scale to player level on modded dimensions. Unsure if this is better. 
 * fix spell tree not adding stats
 * made higher map tiers have better rarity drops
+* added currency that turns maps into maps good for leveling
